feat: Update content, navigation, and feature descriptions across multiple languages and components.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -5,9 +5,12 @@
   },
   "nav": {
     "features": "المميزات",
+    "scheduler": "المجدول",
+    "ecosystem": "النظام البيئي",
     "benefits": "الفوائد",
-    "gallery": "المعرض",
-    "waitlist": "انضم للقائمة"
+    "pricing": "الخطط",
+    "waitlist": "انضم للقائمة",
+    "gallery": "المعرض"
   },
   "hero": {
     "badge": "مركز صحة العائلة · iOS 18+",
