--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -5,9 +5,12 @@
   },
   "nav": {
     "features": "Функции",
+    "scheduler": "Планировщик",
+    "ecosystem": "Экосистема",
     "benefits": "Преимущества",
-    "gallery": "Галерея",
-    "waitlist": "В список ожидания"
+    "pricing": "Тарифы",
+    "waitlist": "В список ожидания",
+    "gallery": "Галерея"
   },
   "hero": {
     "badge": "Семейный центр здоровья - iOS 18",
