--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -5,9 +5,12 @@
   },
   "nav": {
     "features": "विशेषताएं",
+    "scheduler": "अनुसूचक",
+    "ecosystem": "पारिस्थितिकी तंत्र",
     "benefits": "लाभ",
-    "gallery": "गैलरी",
-    "waitlist": "वेटलिस्ट में शामिल हों"
+    "pricing": "योजनाएं",
+    "waitlist": "वेटलिस्ट में शामिल हों",
+    "gallery": "गैलरी"
   },
   "hero": {
     "badge": "परिवार स्वास्थ्य केंद्र · iOS 18+",
